ReleaseServlet create