@@ -12,29 +12,21 @@ public class PlaceService {
     }
 
     public static void takeThePlaseOf(Place place, int sessionId) {
-        System.out.println("takeThePlaseOf");
         Storage.instOf().changePlaceStatus(place, sessionId);
     }
 
     public static void releaseThisPlace(Place place) {
-        System.out.println("place name is " + place.getName());
+        System.out.println("release");
         Storage.instOf().changePlaceStatus(place, Integer.parseInt(place.getName()));
     }
 
 
-
     public static Place getPlaceById(int id) {
-        System.out.println("getPlaceById");
         return Storage.instOf().findById(id);
     }
 
-    public static Place getPlaceBySession(int sessionId) {
-        Optional<Place> place = Storage.instOf().findPlaceBySession(sessionId);
-        return place.get();
-    }
-
     public static Collection<Place> placeForJson(int id) {
-//        return List.of(getPlaceById(id));
-        return new ArrayList<>(Collections.singletonList(getPlaceById(id)));
+        Place place = getPlaceById(id);
+        return new ArrayList<>(Collections.singletonList(place));
     }
 }
